# Sentient-Agent-Framework

./: .gitignore  README.md  clean.py  pyproject.toml  requirements.txt
src/sentient_agent_framework/: __init__.py  sentient_agent_framework.py
src/sentient_agent_framework/implementation/: README.md  base_agent.py  base_server_agent.py  default_hook.py  default_response_handler.py  default_server.py  default_text_stream.py  id_generator.py
src/sentient_agent_framework/interface/: README.md  agent.py  hook.py  response_handler.py
src/sentientchat_agent/: sentientchat_agent.py
src/sentientchat_agent/implementation/: default_hook.py  default_response_handler.py  default_text_stream.py
src/sentientchat_agent/interface/: hook.py  response_handler.py
