[build-system]
requires = [
  "setuptools>=61.0",
  "annotated-types==0.7.0",
  "build==1.2.2.post1",
  "cuid2==2.0.1",
  "packaging==24.2",
  "pydantic==2.10.6",
  "pydantic_core==2.27.2",
  "pyproject_hooks==1.2.0",
  "python-ulid==3.0.0",
  "typing_extensions==4.13.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sentient-agent-framework"
description = "This python package provides an agent framework that can be used to build agents that serve Sentient Chat events."
version = "0.1.1"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name="Chris Aubin", email="christopher@sentient.xyz" },
]
maintainers = [
  { name="Chris Aubin", email="christopher@sentient.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/sentient-agi/Sentient-Agent-Framework"
Issues = "https://github.com/sentient-agi/Sentient-Agent-Framework/issues"
Website = "https://sentient.xyz"