[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "sentient-agent-framework"
description = "This python package provides an agent framework that can be used to build agents that serve Sentient Chat events."
version = "0.3.0"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name="Chris Aubin", email="christopher@sentient.xyz" },
]
maintainers = [
  { name="Chris Aubin", email="christopher@sentient.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "cuid2==2.0.1",
  "fastapi==0.115.12",
  "python-ulid==3.0.0",
  "uvicorn==0.34.0"
]

[project.urls]
Homepage = "https://github.com/sentient-agi/Sentient-Agent-Framework"
Issues = "https://github.com/sentient-agi/Sentient-Agent-Framework/issues"
Website = "https://sentient.xyz"